# cpp_project_template

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
cmake/: cppcheck.cmake  third_party.cmake
config/demo/: cm.json  tmp_cm.json
include/: channel_message.h  channel_message_buffer.h  channel_message_impl.h  mylib.h  sensor_frames.h
include/message/: sensors.h
proto/: CMakeLists.txt
src/: CMakeLists.txt  channel_message.cpp  main.cpp  my_app.cpp  mylib.cpp  mylib.h
src/common/: earth.hpp  eigen_type.hpp  eigen_units.h  extral_units.hpp  geometry_register.h
src/config/: channel_config.h  config_manager.h  core_setting.h  sensor_setting.h
src/data/: reader.h
src/message/: message.h  message_buffer.h  message_callback.h  message_dispatcher.h  message_impl.h  sensors.h
src/modules/: CMakeLists.txt  app_base.h  demo_module.h
src/modules/lm/: CMakeLists.txt  kalman.h  lm.cpp  lm.h
src/modules/lm/releative_loc/: initializer.cpp  initializer.h  releative_loc.cpp  releative_loc.h
src/modules/psins/: CMakeLists.txt  psins_app.h  psins_reader.h
src/modules/psins/Demo/: PSINS_Demo.cpp  PSINS_Demo.h
src/modules/psins/PSINSCore/: KFApp.cpp  KFApp.h  PSINS.cpp  PSINS.h
src/view/: CMakeLists.txt  DownsampleLTTB.h  down_sample.h  lttb.h  main.cpp  tree_view_helper.h  viewer.cpp  viewer.h
src/view/injector/: CMakeLists.txt  scene.h  vtkDearImGuiInjector.cxx  vtkDearImGuiInjector.h
tests/: CMakeLists.txt  app_mock.h  data_mock.h  earth.cpp  fotmat.cpp  functional.cpp  geometry.cpp  geometry_wrapper.cpp  icl.cpp  kalman_filter.cpp  main.cpp  msf.cpp  offline.cpp  sensor_frame.cpp  sensors.cpp  timer.cpp  tuple.cpp  typelist.cpp  ylt.cpp
tests/linear_algbra/: chapter_4_1_2.cpp  chapter_4_3.cpp  chapter_4_4.cpp  chapter_5_1.cpp  chapter_6_3.cpp  lesson_1.cpp  lesson_2.cpp  lesson_3.cpp  lesson_4.cpp  lesson_5_6_7.cpp  lesson_8.cpp  lesson_9_10.cpp  rref.h
tests/mock/: app_mock.h  data_mock.h
tests/sophus/: geometry.cpp
tests/template/: implict_comvert.cpp  typelist.cpp
tests/use_target/: CMakeLists.txt  use_demo.cpp
